[project]
name = "gridworks-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "gridworks-journalkeeper @ git+https://github.com/thegridelectric/gridworks-journalkeeper.git",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gwanalytics*"]
