[project]
name = "gridworks-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "sqlalchemy>=2.0.40",
    "pendulum>=3.1.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gwanalytics*"]
